--- a/molly/apps/places/templates/places/category_list.html
+++ b/molly/apps/places/templates/places/category_list.html
@@ -3,7 +3,9 @@
 {% block content %}
 
 <div class="section">
+<div class="header">
   <h2>Places</h2>
+</div>
 	<ul class="link-list">
 	{% for entity_type in entity_types %}
 	    <li{% if forloop.last %} class="round-bottom"{% endif %}><a href="{% url places:category-detail entity_type.slug %}">{{ entity_type.verbose_name_plural|capfirst }}</a></li>
