--- a/molly/apps/places/templates/places/postcode.html
+++ b/molly/apps/places/templates/places/postcode.html
@@ -3,11 +3,12 @@
 {% block content %}
 
 <div class="section">
+<div class="header">
   <h2>Places with this post code</h2>
 {% if entities|length_is:"1" %}
   <div class="note"><div class="bubble pad-10">
     We don't know of anywhere with this post code.
-  </div></div>
+  </div></div></div>
 <ul>
 {% else %}
   <ul>
