--- a/molly/apps/places/templates/places/category_detail.html
+++ b/molly/apps/places/templates/places/category_detail.html
@@ -7,6 +7,7 @@
 {% block content %}
 
 <div class="section">
+<div class="header">
   <h2>
     Found {{ count }}
     {% ifequal count 1 %}
@@ -21,7 +22,7 @@
       {% endifnotequal %} 
     {% endifequal %}
   </h2>
-
+</div>
 {% if not found_entity_types|length_is:0 and not found_entity_types|length_is:1 %}
   <div class="note">
     <div class="bubble pad-10">
