--- a/molly/apps/places/templates/places/index.html
+++ b/molly/apps/places/templates/places/index.html
@@ -48,8 +48,10 @@
 
 {# Points of Interest #}
 <div class="section">
+<div class="header">
   <h2>Points of Interest</h2>
   {% include "geolocation/update_location_embed.html" %}
+</div>
   <ul class="link-list">
     <li><a href="{% url places:nearby-list %}">Near Me</a></li>
     <li class="round-bottom"><a href="{% url places:category-list %}">By Category</a></li>
