--- a/molly/apps/webcams/templates/webcams/index.html
+++ b/molly/apps/webcams/templates/webcams/index.html
@@ -8,7 +8,9 @@
 
 
 <div class="section">
+<div class="header">
 	<h2>Webcams</h2>
+</div>
 		<ul class="link-list">
 {% for webcam in webcams %}
 		<li {% if forloop.last %}class="round-bottom"{% endif %}>
