--- a/molly/apps/places/templates/places/entity_detail.html
+++ b/molly/apps/places/templates/places/entity_detail.html
@@ -8,6 +8,7 @@
 {% include "places/metadata/ldb.html" %}
 
 <div class="section">
+<div class="header">
     {% include "places/metadata/real_time_information.html" %}
     {% if not entity.metadata.real_time_information %}
       <h2>Map</h2>
@@ -22,7 +23,7 @@
         <img src="{% map_url entity.location %}" alt="Map"><br />
         {% include "places/map_elements.html" %}
     {% endifnotequal %}
-    
+ </div>  
 	<ul class="link-list">
 	    <li class="round-bottom"><a href="{% url places:entity-nearby-list entity.identifier_scheme entity.identifier_value %}" rel="nofollow">Find things near here</a></li>
 	</ul>
@@ -31,6 +32,9 @@
 	        We do not yet have a location for this {{ entity.entity_type.verbose_name }}.
 	    </div></div>
 	{% endif %}
+
+
+
 </div>
 
 {% include "places/metadata/oxpoints.html" %}
