--- a/molly/apps/places/templates/places/metadata/park_and_ride.html
+++ b/molly/apps/places/templates/places/metadata/park_and_ride.html
@@ -1,6 +1,8 @@
 {% if entity.metadata.park_and_ride %}
 <div class="section">
-  <h2>Car Park Information</h2>
+  <div class="header">
+    <h2>Car Park Information</h2>
+  </div>
   <div class="article">
     <div class="bubble pad-5">
       Spaces: {{ entity.metadata.park_and_ride.spaces }} / {{ entity.metadata.park_and_ride.capacity }}
