--- a/molly/apps/places/templates/places/metadata/ldb.html
+++ b/molly/apps/places/templates/places/metadata/ldb.html
@@ -20,7 +20,7 @@
         {% if train_station.metadata.ldb.platformAvailable %}
         <th>Plat.</th>
         {% endif %}
-        <th>Due</th>
+        <th>Scheduled</th>
         <th>Expected</th>
       </tr>
     </thead>
