Removed 'correct as of' message for river status - makes the page messy and may confuse things further with future caching

--- a/demos/molly_oxford/templates/home/index.html
+++ b/demos/molly_oxford/templates/home/index.html
@@ -81,7 +81,7 @@
                 </tr>  
                 <tr>
                   <td colspan="2">
-                    Correct at {{ flag_status.0.updated|date:"H:i" }} ({{ flag_status.0.updated|timesince }} ago). <a href="{% url home:static_about %}#flag">Disclaimer</a>
+                    Correct at {{ flag_status.0.updated|date:"H:i" }} <a href="{% url home:static_about %}#flag">disclaimer</a>
                   </td>
                 </tr>  
             </tbody>
