--- a/molly/apps/places/templates/places/entity_detail.html
+++ b/molly/apps/places/templates/places/entity_detail.html
@@ -12,7 +12,7 @@
   <div class="header">
     <h2>Travel Alert</h2>
   </div>
-  <div class="note"><div class="bubble pad-5">
+  <div class="section-content"><div class="bubble pad-5">
       {{ entity.title }}
   </div></div>
 </div>
@@ -29,6 +29,8 @@
 	<h2>Real-time information - {% now "G:i:s "%}</h2>
       {% endif %}
     {% endif %}
+ </div>
+ <div class="section-content no-round-bottom">
     {% include "places/metadata/real_time_information.html" %}
     {% if entity.location %}
 	
@@ -40,7 +42,7 @@
         <img src="{% map_url entity.location %}" alt="Map"><br />
         {% include "places/map_elements.html" %}
     {% endifnotequal %}
- </div>  
+ </div>
 	<ul class="link-list">
 	    <li class="round-bottom"><a href="{% url places:entity-nearby-list entity.identifier_scheme entity.identifier_value %}" rel="nofollow">Find things near here</a></li>
 	</ul>
