--- a/molly/apps/transport/templates/transport/index.html
+++ b/molly/apps/transport/templates/transport/index.html
@@ -38,7 +38,7 @@
     <h2><img src="http://chart.apis.google.com/chart?chst=d_simple_text_icon_left&chld=|14|000|bus|24|000|FFF" />{{ bus_stops.results_type }} bus stops - {% now "G:i:s "%}</h2>
   </div>
   
-  <table class="content">
+  <table class="content{% ifequal bus_stops.results_type "Favourite" %} no-round-bottom{% endifequal %}">
     <tbody>
 
 {% for entity in bus_stops.entities %}
@@ -59,6 +59,11 @@
 {% endfor %}
     </tbody>
   </table>
+  {% ifequal bus_stops.results_type "Favourite" %}
+  <ul class="link-list">
+    <li><a href="{% url places:nearby-detail "bus-stop" %}">View nearby bus stops</a></li>
+  </ul>
+  {% endifequal %}
 </div>
 
 {% if train_station %}
