Show correct HTML to dumb phones

--- a/demos/molly_oxford/templates/base.html
+++ b/demos/molly_oxford/templates/base.html
@@ -40,7 +40,7 @@
 
 {% block header %}
 
-{% ifnotequal style_group "dumb" %}
+{% ifnotequal style_group "groups-dumb" %}
     <div id="bc-header">
       <ol id="bc">
         <li><a href="{% url home:index %}">
