--- a/molly/apps/places/templates/places/update_osm.html
+++ b/molly/apps/places/templates/places/update_osm.html
@@ -50,7 +50,7 @@
     <em>&quot;{{ entity.title }}&quot;</em>.
   </div>
   
-  {% ifnotequal style_group "dumb" %}
+  {% ifnotequal style_group "groups-dumb" %}
     <div class="backgrounded-image" style="background-image:url('{% map_url entity.location %}'); height:{{ map_height }}px">
     {% include "places/map_elements.html" %}
     </div>
