--- a/molly/geolocation/templates/geolocation/update_location_confirm.html
+++ b/molly/geolocation/templates/geolocation/update_location_confirm.html
@@ -1,7 +1,7 @@
 <p>Did you mean&hellip;</p>
 
 {% if map_url %}
-{% ifnotequal style_group "dumb" %}
+{% ifnotequal style_group "groups-dumb" %}
     <div class="backgrounded-image" style="background-image:url('{{ map_url }}'); height:{{ map_height }}px">
     {% include "places/map_elements.html" %}
     </div>
