--- a/molly/apps/feeds/templates/rss/news/index.html
+++ b/molly/apps/feeds/templates/rss/news/index.html
@@ -13,7 +13,7 @@
                 {{ search_form.query }}
         </td><td>
                 <input type="hidden" name="application" value="news" title="Search News" />
-                {% ifequal style_group "dumb" %}
+                {% ifequal style_group "groups-dumb" %}
                     <button type="submit">Go!</button>
                 {% else %}
                 	<input type="image" src="{{ MEDIA_URL }}site/png/new/buttons/search-button.png" title="Search" />
