--- a/molly/apps/places/templates/places/index.html
+++ b/molly/apps/places/templates/places/index.html
@@ -31,7 +31,7 @@
                 {{ search_form.query }}
         </td><td>
                 <input type="hidden" name="application" value="places" title="Search Places" />
-                {% ifequal style_group "dumb" %}
+                {% ifequal style_group "groups-dumb" %}
                     <button type="submit">Go!</button>
                 {% else %}
                 	<input type="image" src="{{ MEDIA_URL }}site/png/new/buttons/search-button.png" title="Search" />
