--- a/molly/apps/places/templates/places/service_details.html
+++ b/molly/apps/places/templates/places/service_details.html
@@ -108,7 +108,7 @@
 
 <div class="section">
   <h2>Map</h2>
-{% ifnotequal style_group "dumb" %}
+{% ifnotequal style_group "groups-dumb" %}
     <div class="backgrounded-image" style="background-image:url('{% url osm:generated_map map_hash %}'); height:{{ map_height }}px">
     {% include "places/map_elements.html" %}
     </div>
