--- a/molly/apps/podcasts/templates/podcasts/index.html
+++ b/molly/apps/podcasts/templates/podcasts/index.html
@@ -33,7 +33,7 @@
                 {{ search_form.query }}
         </td><td>
                 <input type="hidden" name="application" value="podcasts" title="Search Podcasts" />
-                {% ifequal style_group "dumb" %}
+                {% ifequal style_group "groups-dumb" %}
                     <button type="submit">Go!</button>
                 {% else %}
                 	<input type="image" src="{{ MEDIA_URL }}site/png/new/buttons/search-button.png" title="Search" />
