Added 'alt' tag to all input images across the site as required by w3c

--- a/molly/apps/home/templates/home/index.html
+++ b/molly/apps/home/templates/home/index.html
@@ -22,7 +22,7 @@
 		{% ifequal style_group "dumb" %}
 		    <input type="button" value="Search" />
 		{% else %}
-			<input type="image" src="{{ MEDIA_URL }}png/new/buttons/search-button.png" title="Search" />
+			<input type="image" src="{{ MEDIA_URL }}png/new/buttons/search-button.png" title="Search" alt="Search"/>
 		{% endifequal %}
 		 </p>
 		 </form>
