Use correct styling for P&R info

--- a/molly/apps/places/templates/places/metadata/park_and_ride.html
+++ b/molly/apps/places/templates/places/metadata/park_and_ride.html
@@ -3,7 +3,7 @@
   <div class="header">
     <h2>Car Park Information</h2>
   </div>
-  <div class="article">
+  <div class="section-content">
     <div class="bubble pad-5">
       Spaces: {{ entity.metadata.park_and_ride.spaces }} / {{ entity.metadata.park_and_ride.capacity }}
       <div style="width:100%;border: 1px solid #7c7c7c;height: 5px; background-color:#00ff00;">
