Fixing various validation errors to front page, due to font styling, duplicate image heights

--- a/demos/molly_oxford/templates/home/index.html
+++ b/demos/molly_oxford/templates/home/index.html
@@ -66,9 +66,9 @@
                     <td style="width:50%">
       {% oxford_date_today %}
                     </td>
-                    <td style="width:50%;">
+                    <td style="width:50%; font-size:1.2em">
 
-      {% weather %}<big>Oxford: {{ weather.temperature }}&deg;C</big><img width="16" height="16" src="{{ MEDIA_URL }}weather/png/{{ weather.icon }}_small.png" alt="{{ weather.get_outlook_display|capfirst }}" height="30" width="30" style="vertical-align:middle;"/>
+      {% weather %}Oxford: {{ weather.temperature }}&deg;C<img src="{{ MEDIA_URL }}weather/png/{{ weather.icon }}_small.png" alt="{{ weather.get_outlook_display|capfirst }}" height="30" width="30" style="vertical-align:middle;"/>
 
                     </td>
                 </tr>
