--- a/demos/molly_oxford/templates/home/index.html
+++ b/demos/molly_oxford/templates/home/index.html
@@ -8,12 +8,11 @@
 {% block header %}
 <div id="index-header">
     <div id="index-title">
-		<!-- <img src="{{ MEDIA_URL }}site/png/headers/{{ device.resolution_width|header_width }}.png" alt="Mobile Oxford"/> -->
 		{% ifequal style_group "dumb" %}
-		    <img src="{{ MEDIA_URL }}site/png/new/logos/logo-90x55.jpg" alt="Mobile Oxford">
+		    <img width="90" height="55" src="{{ MEDIA_URL }}site/png/new/logos/logo-90x55.jpg" alt="Mobile Oxford">
 		{% else %}
 		{% if is_christmas %}
-            <img src="{{ MEDIA_URL }}site/png/new/logos/logo-128x51-TRMargin-5px-christmas.png" alt="Mobile Oxford"/>
+            <img width="128" height="51" src="{{ MEDIA_URL }}site/png/new/logos/logo-128x51-TRMargin-5px-christmas.png" alt="Mobile Oxford"/>
 		{% else %}
 	    <img src="{{ MEDIA_URL }}site/png/new/logos/logo-128x51-TRMargin-5px.png" alt="Mobile Oxford"/>
 		{% endif %}
@@ -48,11 +47,11 @@
     <div class="bubble">
 	<div class="center">
     	<ol class="icon-menu">
-	      {% for application in applications %}{% if application.display_to_user %}
+		  {% for application in applications %}
 	          <li id="menu-{{ application.local_name }}">
-	              <a accesskey="{{ forloop.counter }}" href="{{ application.url }}">{{ application.title }}</a>
+	              <a {% if forloop.counter < 10 %} accesskey="{{ forloop.counter }}"{% endif %} href="{{ application.url }}">{{ application.title }}</a>
 	          </li>
-	      {% endif %}{% endfor %}
+	      {% endfor %}
 	    </ol>
         {# Only necessary if using floating icons #}
         {# <div class="clearhidden"> </div> #}
@@ -76,7 +75,7 @@
                 <tr>
                 {% flag_status %}
                 {% for flag in flag_status %}
-                    <td title="{{ flag.get_status_display }}">{{ flag.name }}: <img src="{{ flag.get_icon_url }}" alt="{{ flag.get_status_display }}"/></td>
+                    <td title="{{ flag.get_status_display }}">{{ flag.name }}: <img src="{{ flag.get_icon_url }}" alt="{{ flag.get_status_display }}" width="16" height="16"/></td>
                 {% endfor %}
                 </tr>  
                 <tr>
@@ -102,8 +101,8 @@
             Produced by Oxford University Computing Services <br /><a href="http://www.oucs.ox.ac.uk">www.oucs.ox.ac.uk</a>
         {% else %}
     <div class="content" style="margin:8px;">
-        <img src="{{ MEDIA_URL }}site/png/oucs-logo-small.png" alt="Oxford University Computing Services"/>
-        <img src="{{ MEDIA_URL }}site/gif/brandmark.gif" alt="University of Oxford" />
+        <img width="140" height="46" src="{{ MEDIA_URL }}site/png/oucs-logo-small.png" alt="Oxford University Computing Services"/>
+        <img width="141" height="46" src="{{ MEDIA_URL }}site/gif/brandmark.gif" alt="University of Oxford" />
     </div>
         {% endifequal %}
     </div>
