--- a/molly/apps/home/templates/home/index.html
+++ b/molly/apps/home/templates/home/index.html
@@ -7,7 +7,6 @@
 {% block header %}
 <div id="index-header">
     <div id="index-title">
-		<!-- <img src="{{ MEDIA_URL }}png/headers/{{ device.resolution_width|header_width }}.png" alt="Mobile Oxford"/> -->
 		{% ifequal style_group "dumb" %}
 		    <img src="{{ MEDIA_URL }}png/new/logos/logo-90x55.jpg" alt="Mobile Oxford">
 		{% else %}
@@ -80,8 +79,8 @@
         {% else %}
     <div class="content" style="margin:8px;">
     
-        <img src="{{ MEDIA_URL }}png/oucs-logo-small.png" alt="Oxford University Computing Services"/>
-        <img src="{{ MEDIA_URL }}gif/brandmark.gif" alt="University of Oxford" />
+        <img width="140" height="46" src="{{ MEDIA_URL }}png/oucs-logo-small.png" alt="Oxford University Computing Services"/>
+        <img width="141" height="46" src="{{ MEDIA_URL }}gif/brandmark.gif" alt="University of Oxford" />
     </div>
         {% endifequal %}
     </div>
