Start work on anchors

--- a/molly/apps/places/templates/places/metadata/ldb.html
+++ b/molly/apps/places/templates/places/metadata/ldb.html
@@ -1,6 +1,6 @@
 {% load molly_utils %}{% if train_station.metadata.ldb %}
 
-<div class="section">
+<div class="section" id="ldb">
   <div class="header">
     <h2>{{ train_station.title }} (departures) - {{ train_station.metadata.ldb.generatedAt|date:"H:i:s" }}</h2>
   </div>
