--- a/molly/apps/places/templates/places/service_details.html
+++ b/molly/apps/places/templates/places/service_details.html
@@ -107,7 +107,10 @@
 {% endif %}
 
 <div class="section">
-  <h2>Map</h2>
+    <div class="header">
+        <h2>Map</h2>
+    </div>
+    <div class="section-content">
 {% ifnotequal style_group "dumb" %}
     <div class="backgrounded-image" style="background-image:url('{% url osm:generated_map map_hash %}'); height:{{ map_height }}px">
     {% include "places/map_elements.html" %}
@@ -116,6 +119,7 @@
     <img src="{% url osm:generated_map map_hash %}" alt="Map"><br />
     {% include "places/map_elements.html" %}
 {% endifnotequal %}
+    </div>
 </div>
 
 {% endblock %}
