--- a/molly/apps/transport/templates/transport/index.html
+++ b/molly/apps/transport/templates/transport/index.html
@@ -1,22 +1,54 @@
 {% extends "transport/base.html" %}{% load molly_utils %}
+{% block extrahead %}
+<style type="text/css">
+ul#transport-links{
+	list-style: none;
+	margin: 0;
+	padding: 5px;
+	text-align:center;
+}
+
+ul li.transport-link {
+	margin: 0 5px;
+	display: inline-block;
+	background-color: #002B4C;
+	background: -webkit-gradient(linear, left top, left bottom,
+	      from(rgb(105,153,195)), color-stop(0.5, rgb(3,59,113)), to(rgb(27,87,144)));
+	background: -moz-linear-gradient(top, rgb(105,153,195), rgb(3,59,113), rgb(27,87,144));
+	border-radius: 8px; -webkit-border-radius: 8px; -moz-border-radius: 8px; 
+	
+	box-shadow: 3px 3px 3px #333;
+	-webkit-box-shadow: 3px 3px 3px #333;
+	-moz-box-shadow: 3px 3px 3px #333;
+}
+
+ul li.transport-link a img { border: 0; }
+
+
+</style>
+{% endblock %}
 
 {% block content %}
 
-<div style="width:100%;height:48px;">
-  <div style="width:25%;float:left;text-align:center;"><a href="#park_and_rides"><img src="" alt="Park and Rides" width="48" height="48" /></a></div>
-  <div style="width:25%;float:left;text-align:center;"><a href="#bus"><img src="" alt="Bus Stops" width="48" height="48" /></a></div>
-  <div style="width:25%;float:left;text-align:center;"><a href="#ldb"><img src="" alt="Train Departure Boards" width="48" height="48" /></a></div>
-  <div style="width:25%;float:left;text-align:center;"><a href="#travel_news"><img src="" alt="Travel News" width="48" height="48" /></a></div>
-</div>
+<ul id="transport-links">
+	<li class="transport-link">
+		<a href="#park_and_rides"><img src="" alt="Park and Rides" width="48" height="48" /></a></li>
+	<li class="transport-link">
+		<a href="#bus"><img src="" alt="Bus Stops" width="48" height="48" /></a></li>
+	<li class="transport-link">
+		<a href="#ldb"><img src="" alt="Train Departure Boards" width="48" height="48" /></a></li>
+	<li class="transport-link">
+		<a href="#travel_news"><img src="" alt="Travel News" width="48" height="48" /></a></li>
+</ul>
 
 <div class="section" id="park_and_rides">
   <div class="header">
     <h2>Park and Rides</h2>
   </div>
-  <div class="section-content" style="color:#000000;">
+  <div class="section-content" style="color:#000;">
     {% for entity in park_and_rides.entities %}
     <div style="width: 50%;{% if not forloop.last or forloop.counter|divisibleby:2 %} float: left;{% endif %} margin: 3px auto 3px auto;">
-      <h3><a href="{{ entity.get_absolute_url}}" style="color:#000000;">{{ entity.title|slice:":-14" }}</a></h3>
+      <h3><a href="{{ entity.get_absolute_url}}" style="color:#000;">{{ entity.title|slice:":-14" }}</a></h3>
       <div style="width:90%;border: 1px solid #7c7c7c;height: 7px; background-color:#00ff00;margin: 5px auto;">
         <div style="width: {{ entity.metadata.park_and_ride.percentage }}%; height:7px;background-color: #ff0000;">&nbsp;</div>
       </div>
