--- a/molly/apps/transport/templates/transport/index.html
+++ b/molly/apps/transport/templates/transport/index.html
@@ -1,9 +1,9 @@
-{% extends "transport/base.html" %}{% load molly_utils %}
+{% extends "transport/base.html" %}{% load molly_utils %}{% load portal_misc %}
 {% block extrahead %}
 <style type="text/css">
 ul#transport-links{
 	list-style: none;
-	margin: 0;
+	margin: 5px 0 0 0;
 	padding: 5px;
 	text-align:center;
 }
@@ -24,22 +24,58 @@ ul li.transport-link {
 
 ul li.transport-link a img { border: 0; }
 
+.section .header h2 {
+    background-repeat: no-repeat;
+    background-position: top right;
+    height: 20px;
+    padding-top: 7px;
+    width: 100%;
+}
+
+#park_and_rides .header h2 {
+    background-image: url('{{ MEDIA_URL }}transport/png/pride-small.png');
+}
+
+#bus .header h2 {
+    background-image: url('{{ MEDIA_URL }}transport/png/bus-small.png');
+}
+
+#ldb .header h2 {
+    background-image: url('{{ MEDIA_URL }}transport/png/train-small.png');
+}
+
+#travel_news .header h2 {
+    background-image: url('{{ MEDIA_URL }}transport/png/warn-small.png');
+}
 
 </style>
 {% endblock %}
 
 {% block content %}
 
+{% if device|device_has_parent:"apple_iphone_ver4" or browser.svgt_1_1 %}
 <ul id="transport-links">
 	<li class="transport-link">
-		<a href="#park_and_rides"><img src="" alt="Park and Rides" width="48" height="48" /></a></li>
+		<a href="#park_and_rides"><img src="{{ MEDIA_URL }}transport/svg/pride.svg" alt="Park and Rides" width="48" height="48" /></a></li>
 	<li class="transport-link">
-		<a href="#bus"><img src="" alt="Bus Stops" width="48" height="48" /></a></li>
+		<a href="#bus"><img src="{{ MEDIA_URL }}transport/svg/bus.svg" alt="Bus Stops" width="48" height="48" /></a></li>
 	<li class="transport-link">
-		<a href="#ldb"><img src="" alt="Train Departure Boards" width="48" height="48" /></a></li>
+		<a href="#ldb"><img src="{{ MEDIA_URL }}transport/svg/train.svg" alt="Train Departure Boards" width="48" height="48" /></a></li>
 	<li class="transport-link">
-		<a href="#travel_news"><img src="" alt="Travel News" width="48" height="48" /></a></li>
+		<a href="#travel_news"><img src="{{ MEDIA_URL }}transport/svg/warn.svg" alt="Travel News" width="48" height="48" /></a></li>
 </ul>
+{% else %}
+<ul id="transport-links">
+	<li class="transport-link">
+		<a href="#park_and_rides"><img src="{{ MEDIA_URL }}transport/png/pride.png" alt="Park and Rides" width="48" height="48" /></a></li>
+	<li class="transport-link">
+		<a href="#bus"><img src="{{ MEDIA_URL }}transport/png/bus.png" alt="Bus Stops" width="48" height="48" /></a></li>
+	<li class="transport-link">
+		<a href="#ldb"><img src="{{ MEDIA_URL }}transport/png/train.png" alt="Train Departure Boards" width="48" height="48" /></a></li>
+	<li class="transport-link">
+		<a href="#travel_news"><img src="{{ MEDIA_URL }}transport/png/warn.png" alt="Travel News" width="48" height="48" /></a></li>
+</ul>
+{% endif %}
 
 <div class="section" id="park_and_rides">
   <div class="header">
@@ -60,7 +96,7 @@ ul li.transport-link a img { border: 0; }
 
 <div class="section" id="bus">
   <div class="header">
-    <h2><img src="http://chart.apis.google.com/chart?chst=d_simple_text_icon_left&chld=|14|000|bus|24|000|FFF" />{{ bus_stops.results_type }} bus stops - {% now "G:i:s "%}</h2>
+    <h2>{{ bus_stops.results_type }} bus stops - {% now "G:i:s "%}</h2>
   </div>
   
   <table class="content{% ifequal bus_stops.results_type "Favourite" %} no-round-bottom{% endifequal %}">
