--- a/demos/molly_oxford/templates/base.html
+++ b/demos/molly_oxford/templates/base.html
@@ -15,11 +15,12 @@
 {% endif %}
 
   {% compressed_css style_group %}
-  <link rel="icon" type="image/png" href="{{ MEDIA_URL }}png/favicon.png"/>{% if device|device_has_parent:"apple_iphone_ver4" or browser.svgt_1_1 %}
-  {% compressed_css 'svg' %}
-{% endif %}
+  <link rel="icon" type="image/png" href="{{ MEDIA_URL }}png/favicon.png"/>
+  {% if device|device_has_parent:"apple_generic" or browser.svgt_1_1 %}
+    {% compressed_css 'svg' %}
+  {% endif %}
 
-{% if device|device_has_parent:"apple_iphone_ver1" %}
+{% if device|device_has_parent:"apple_generic" %}
     <link rel="apple-touch-icon" href="{{ MEDIA_URL}}site/png/apple-touch-icon.png"/>
     <link rel="apple-touch-startup-image" href="{{ MEDIA_URL}}site/png/apple-touch-startup-image.jpg">
     <meta name="apple-mobile-web-app-capable" content="yes" />
