--- a/molly/favourites/templates/favourite.html
+++ b/molly/favourites/templates/favourite.html
@@ -1,13 +1,27 @@
 {% if is_favouritable %}
+  {% ifnotequal style_group "groups-dumb" %}
     <div id="favourite-bit">
         <form action="{% url favourites:index %}" method="post">
             <input type="hidden" name="URL" value="{{ favourite_url|escape }}" />
             {% csrf_token %}
             {% if is_favourite %}
-                <input type="submit" name="unfavourite" value="*" />
+                <input type="submit" id="unfavourite" name="unfavourite" value="" />
             {% else %}
-                <input type="submit" name="favourite" value="*" />
+                <input type="submit" id="favourite" name="favourite" value="" />
             {% endif %}
         </form>
     </div>
+  {% else %}
+    <div id="favourite-bit">
+        <form action="{% url favourites:index %}" method="post">
+            <input type="hidden" name="URL" value="{{ favourite_url|escape }}" />
+            {% csrf_token %}
+            {% if is_favourite %}
+                <input type="submit" id="unfavourite" name="unfavourite" value="Unfavourite" />
+            {% else %}
+                <input type="submit" id="favourite" name="favourite" value="Favourite" />
+            {% endif %}
+        </form>
+    </div>
+  {% endifnotequal %}
 {% endif %}
