Styling improvements in headings

--- a/molly/apps/transport/templates/transport/index.html
+++ b/molly/apps/transport/templates/transport/index.html
@@ -27,7 +27,7 @@ ul li.transport-link a img { border: 0; }
 .section .header h2 {
     background-repeat: no-repeat;
     background-position: top right;
-    height: 20px;
+    min-height: 20px;
     padding-top: 7px;
     width: 100%;
 }
