--- a/demos/molly_oxford/site_media/site/css/groups/smart.css
+++ b/demos/molly_oxford/site_media/site/css/groups/smart.css
@@ -94,6 +94,7 @@ li#menu-library {background-image:url('../../../site/png/index-icons/library.png
 li#menu-weather {background-image:url('../../../site/png/index-icons/weather.png');}
 li#menu-weblearn {background-image:url('../../../site/png/index-icons/weblearn.png');}
 li#menu-service_status {background-image:url('../../../site/png/index-icons/service_status.png');}
+li#menu-transport {background-image:url('../../../site/png/index-icons/transport.png');}
 /* End Index Page Specific */
 
 
