--- a/demos/molly_oxford/site_media/site/css/svg.css
+++ b/demos/molly_oxford/site_media/site/css/svg.css
@@ -9,3 +9,4 @@ li#menu-library {background-image:url('../svg/index-icons/library.svg');}
 li#menu-weather {background-image:url('../svg/index-icons/weather.svg');}
 li#menu-weblearn {background-image:url('../svg/index-icons/weblearn.svg');}
 li#menu-service_status {background-image:url('../svg/index-icons/service-status.svg');}
+li#menu-transport {background-image:url('../svg/index-icons/transport.svg');}
