--- a/molly/apps/transport/templates/transport/index.html
+++ b/molly/apps/transport/templates/transport/index.html
@@ -110,6 +110,9 @@ ul li.transport-link a img { border: 0; }
 
 {% for entity in bus_stops.entities %}
       <tr class="sub-section-divider"><th colspan="3"><a href="{{ entity.get_absolute_url }}" style="color:inherit;">{{ entity.title }}{% ifnotequal bus_stops.results_type "Favourite" %} <small>({{ entity.distance.km|floatformat:3 }} km{{ entity.bearing }})</small>{% endifnotequal %}</a></th></tr>
+      {% if entity.metadata.real_time_information.pip_info %}
+        <tr><td colspan="3">{{ entity.metadata.real_time_information.pip_info|join:"<br/>" }}</td></tr>
+      {% endif %}
 {% if entity.metadata.real_time_information.services %}
 {% for service in entity.metadata.real_time_information.services %}
       <tr>
@@ -119,7 +122,9 @@ ul li.transport-link a img { border: 0; }
       </tr>
 {% endfor %}
 {% else %}
-      <tr><td colspan="3">{{ entity.metadata.real_time_information.pip_info }}</td></tr>
+    {% if not entity.metadata.real_time_information.pip_info %}
+      <tr><td colspan="3">There is currently no departure information from this stop</td></tr>
+    {% endif %}
 {% endif %}
 {% empty %}
       <tr><td colspan="3">{% include "geolocation/update_location_embed.html" %}</td></tr>
