Get rid of empty class (this is a validation error)

--- a/demos/molly_oxford/templates/home/index.html
+++ b/demos/molly_oxford/templates/home/index.html
@@ -103,7 +103,7 @@
 
     <ul class="stand-alone link-list round-top">
             <li class="round-top"><a href="{% url feature_vote:index %}">Suggest a feature</a></li>
-			<li class=""><a href="{% url home:static_about %}">About this site</a></li>
+			<li><a href="{% url home:static_about %}">About this site</a></li>
 			{% if has_user_messages %}
             <li><a href="{% url home:messages %}">Read messages from the developers</a></li>
 			{% endif %}
