--- a/demos/molly_oxford/templates/home/index.html
+++ b/demos/molly_oxford/templates/home/index.html
@@ -9,12 +9,12 @@
 <div id="index-header">
     <div id="index-title">
 		{% ifequal style_group "groups-dumb" %}
-		    <img src="{{ MEDIA_URL }}site/png/new/logos/logo-90x55.jpg" alt="Mobile Oxford">
+		    <img width="90" height="55" src="{{ MEDIA_URL }}site/png/new/logos/logo-90x55.jpg" alt="Mobile Oxford">
 		{% else %}
 		{% if is_christmas %}
             <img width="128" height="51" src="{{ MEDIA_URL }}site/png/new/logos/logo-128x51-TRMargin-5px-christmas.png" alt="Mobile Oxford"/>
 		{% else %}
-	    <img src="{{ MEDIA_URL }}site/png/new/logos/logo-128x51-TRMargin-5px.png" alt="Mobile Oxford"/>
+	    <img width="128" height="51" src="{{ MEDIA_URL }}site/png/new/logos/logo-128x51-TRMargin-5px.png" alt="Mobile Oxford"/>
 		{% endif %}
         {% endifequal %}
     </div>
